<resources>
    <string name="parse_app_id">6v7Nf8xLQoV8Rspq3g3evuXZTKqixOoaNM443DXZ</string>
    <string name="parse_client_key">MmOyTShmq4oI6lTmzm7u4L7rl6GUbjlPW8ppu5vy</string>

    <string name="app_name">Boom</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="email_text_hint">Email Address</string>

    <string name="sign_up_error_message">And you fucked up</string>
    <string name="sign_up_error_title">Something went wrong…</string>
    <string name="login_error_message">And you fucked up</string>
    <string name="login_error_title">Something went wrong…</string>
    <string name="login_button_label">LOGIN</string>
    <string name="menu_logout_label">Logout</string>
    <string name="no_new_messages_home_tab">No New Messages</string>
    <string name="edit_friends_menu">Edit Friends</string>
    <string name="edit_friends_error_message">Oops</string>
    <string name="menu_camera_label">Camera</string>
    <string name="external_storage_error_message">Problem...</string>
    <string name="general_error">Problem!</string>
    <string name="video_limit_warning">Selected video must be less than 10 MB</string>
    <string name="file_size_too_big_error">This is too big!</string>
    <string name="recipients_friend_list">Choose some friends first!</string>
    <string name="recipients_send_label">Send</string>
    <string name="success_toast">Success!</string>
    <string name="subtitle_login_page">a self-destructing messaging app</string>
    <string name="sign_up_cancel_label">CANCEL</string>
    <string name="push_notification">"New notification from %s!"</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
</resources>
