<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground">

    <include layout="@layout/auth_common"/>


    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/user_name_input_sign_up_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/light_gray"
            android:textSize="17sp">

            <requestFocus/>
        </EditText>

        <EditText
        android:id="@+id/email_input_field_sign_up_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_text_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/light_gray"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/password_input_field_sign_up_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/light_gray"
        android:textSize="17sp"/>


    </LinearLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDivider"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"/>

    <Button
        android:id="@+id/sign_up_button_sign_up_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/sign_up_button_label"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"/>

    <Button
        android:id="@+id/sign_up_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/sign_up_cancel_label"
        android:background="@drawable/button_custom"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="13sp"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@id/buttonDivider"/>


    <ProgressBar
        android:id="@+id/progressBarSignUpPage"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>